--- a/foundations/block-and-inline/02-margin-and-padding-2/style.css
+++ b/foundations/block-and-inline/02-margin-and-padding-2/style.css
@@ -24,7 +24,8 @@ body {
 
 .button-container {
   background: #e3f4ff;
-  margin: 8px 0px 8px 0px;
+  margin: 8px 0px 8px 0px; /* need 0px margin left and right since card has 8px applied in padding in all directions */
+  /*8px padding in card is 8px margin for button, so to account for 8px already on left/right, just need to set margin left/right to 0px*/
   text-align: center;
   padding: 16px 8px;
   box-sizing: border-box;
